--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 # This is a basic workflow to help you get started with Actions
 
 name: Build binaries and release
@@ -54,6 +24,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        fetch-depth: 0
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H%M%S')"
