--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        fetch-depth: 0
+          with:
+            fetch-depth: 0
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H%M%S')"
