--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         run: sudo apt-get install mingw-w64-tools libtool intltool autoconf automake pkg-config mingw-w64 unzip 
       
       - name: Prepare mingw
-        run: sudo mkdir -p /opt/mingw32/ && ./win32/get_msys2_packages.sh
+        run: sudo mkdir -p /opt/mingw32/ && sh ./win32/get_msys2_packages.sh
 
       - name: Create Release
         id: create_release
