--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,15 @@ jobs:
       - name: Install build tools
         run: sudo apt-get install mingw-w64-tools libtool intltool autoconf automake pkg-config mingw-w64 unzip 
       
+      - name: Cache mingw
+        id: cache-mingw
+        uses: actions/cache@v2
+        with:
+          path: /opt/mingw32/
+          key: ${{ runner.os }}-mingw-${{ hashFiles('win32/msys2packages.txt') }}
+
       - name: Prepare mingw
+        if: steps.cache-mingw.outputs.cache-hit != 'true'
         run: sudo mkdir -p /opt/mingw32/ && (cd win32 && sh ./get_msys2_packages.sh)
         
       - name: Build dist packages
